Fix uneven margin around expense item on larger screens

--- a/main.css
+++ b/main.css
@@ -183,6 +183,10 @@ hr {
     transition: none;
   }
 
+  .expense-amount {
+    margin-right: 1rem;
+  }
+
   .expense-item:hover .btn-edit {
     display: block;
   }
